@@ -1,3 +1,4 @@
+Fraction Builder: Added Level 6
 Fraction Builder: Made background light blue
 Fraction Builder: Added a background color chooser
 Fraction Builder: Added levels
